Pradinė projekto struktūra
jQuery + Boostrap pridėjimas.

--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,5 @@
 /* Papildomai, galima pasinaudoti SaaS arba Less CSS preprocesoriumi */
 /* -------------------------------------------------------------- */
+body {
+    /* background: red; */
+}
