Pradinė HTML Struktūra
Forma, sąrašas ir kiti elementai

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,15 @@
 /* Papildomai, galima pasinaudoti SaaS arba Less CSS preprocesoriumi */
 /* -------------------------------------------------------------- */
 body {
-    /* background: red; */
+    background: #D9D9D9;
+}
+
+.todo-list {
+    border-radius: 0;
+}
+
+.add-task-button {
+    width: 100%;
 }
 
 /* Papildomas komentaras */
