Užduoties atvaizdavimas, pagal jos statusą

--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,9 @@ body {
     width: 100%;
 }
 
-.trinti {
-    /*  */
+.task-done label {
+    text-decoration: line-through;
+    color: green;
 }
 
 /* Papildomas komentaras */
